<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="slide1_title">BIENVENUE !</string>
    <string name="slide1_subtitle">bienVU vous permet de participer à l\'amélioration de votre cadre de vie en échangeant des informations avec les services de la ville.</string>
    <string name="slide2_title">ENVOYEZ LES BONNES INFORMATIONS !</string>
    <string name="slide2_subtitle_1"> Bien choisir le bon sujet (graffiti, objet abandonné, défaut sur la route, stationnement gênant…) dans la nomenclature</string>
    <string name="slide2_subtitle_2"> Bien préciser et vérifier l\'adresse exacte de l\'anomalie avec un numéro de rue</string>
    <string name="slide2_subtitle_3"> Joindre une ou plusieurs photos bien cadrées sur l\'anomalie</string>
    <string name="slide2_subtitle_4"> Rajouter une description complémentaire utile et courtoise</string>
    <string name="slide3_title">RESTEZ EN CONTACT !</string>
    <string name="slide3_subtitle">	Connectez-vous avec Mon Paris (votre compte personnel parisien sur Paris.fr) pour suivre la prise en charge de votre contribution et accéder aux fonctionnalités complémentaires. Supprimez régulièrement vos anomalies clôturées pour ne pas saturer la mémoire de votre smartphone et ralentir l\'application</string>
    <string name="slider_button_txt">Commencer</string>
    <string name="information">Information</string>
    <string name="dmr_offline">L\'application bienVU est actuellement en maintenance.\n\nMerci d\'essayer ultérieurement.</string>
    <string name="dmr_offline_publish">L\'application bienVU est actuellement en maintenance.\n\nUn brouillon a été sauvegardé dans votre espace.\n\nMerci d\'essayer ultérieurement.</string>
    <string name="bottom_map_txt">Carte</string>
    <string name="bottom_profile_txt">Mon espace</string>
    <string name="google_searchbar_wording">Où est située l\'anomalie ?</string>
    <string name="anomaly_screen_title">Ajouter</string>
    <string name="description">Description</string>
    <string name="commentagent">Commentaire agent terrain</string>
    <string name="commentagent_agent">Commentaire agent terrain (facultatif)</string>
    <string name="description_subtitle">Saisir plus de détails</string>
    <string name="priority">Priorité</string>
    <string name="valeur_defaut">(valeur par défaut)</string>
    <string name="btn_publier">Publier</string>
    <string name="desc_add_incident">Ajouter un incident</string>
    <string name="text_type">Type</string>
    <string name="text_type_agent">Type (obligatoire)</string>
    <string name="subtitle_type">Sélectionner</string>
    <string name="text_photo">Photo (obligatoire)</string>
    <string name="text_photo_requalification">Photo (facultatif)</string>
    <string name="desc_image1">Première image</string>
    <string name="desc_image2">Seconde image</string>
    <string name="text_optionnels">Précisions facultatives</string>
    <string name="text_mandatory">Informations obligatoires</string>
    <string name="desc_add_picture">Ajouter une photo</string>
    <string name="take_picture">Prendre une photo</string>
    <string name="choose_photo_in_gallery">Choisir dans la galerie</string>
    <string name="select_photo">Sélectionnez une photo</string>
    <string name="save_draft">Vous n\'avez pas finalisé votre déclaration d\'anomalie.\nSouhaitez vous enregistrer un brouillon ?</string>
    <string name="anomaly_position_be_more_specific">Préciser la position de l\'anomalie</string>
    <string name="anomaly_add_one">Ajouter une autre anomalie</string>
    <string name="text_around_incident">Autres anomalies autour de moi</string>
    <string name="text_around_equipement">Autres anomalies dans l\'équipement</string>
    <string name="text_my_position">Ma position</string>
    <string name="text_add">Ajouter</string>
    <string name="text_cancel">Annuler</string>
    <string name="text_priority_low">Gênant</string>
    <string name="text_priority_medium">Très Gênant</string>
    <string name="text_priority_high">Dangereux</string>
    <string name="valeur_defaut_detail">(par défaut)</string>
    <string name="how_to_black_pin">Faites glisser la carte pour placer un repère.</string>
    <string name="save_anomaly_failure">Nous rencontrons des difficultés\nà enregistrer cette anomalie.\n\nMerci d\'essayer ultérieurement.\n \nUn brouillon a été sauvegardé dans votre espace.</string>
    <string name="add_anomaly_no_location">Merci de préciser votre position</string>
    <string name="add_anomaly_offline_mode">Réseau indisponible, veuillez réessayer plus tard</string>
    <string name="btn_text_understand">J\'ai compris</string>
    <string name="greetings_thanks">Merci !</string>
    <string name="greetings_thanks_line_above">Les services de la Plaine Commune\nvous remercient pour\nvotre contribution.</string>
    <string name="greetings_keepintouch">RESTEZ EN CONTACT</string>
    <string name="greetings_connect_part1">Connectez-vous à</string>
    <string name="greetings_connect_part2" translatable="false">MON PARIS</string>
    <string name="greetings_connect_line_above">Renseignez uniquement</string>
    <string name="greetings_email">votre adresse mail</string>
    <string name="greetings_email_line_above">pour suivre la prise en charge de votre\ncontribution.</string>
    <string name="greetings_patienter">Merci de patienter pendant la transmission des informations.</string>
    <string name="greetings_failure">Nous rencontrons des difficultés\nà enregistrer cette anomalie.\n\nMerci d\'essayer ultérieurement.</string>
    <string name="save_mail_popup_title">Restez informé.e</string>
    <string name="save_mail_popul_title_mail_field">Email</string>
    <string name="save_mail_popup_confirm">VALIDER</string>
    <string name="save_mail_popup_cancel">ANNULER</string>
    <string name="login_screen_title" translatable="false">Mon Paris</string>
    <string name="login_screen_email">Email</string>
    <string name="login_screen_password">Mot de passe</string>
    <string name="login_screen_forgot_password">Mot de passe oublié ?</string>
    <string name="login_screen_signup">S\'inscrire</string>
    <string name="login_screen_button">Connexion</string>
    <string name="url_signup_paris" translatable="false"></string>
    <string name="url_forgot_pwd" translatable="false"></string>
    <string name="invalid_email">Veuillez saisir un mail valide</string>
    <string name="required_email">Veuillez saisir votre mail</string>
    <string name="required_pwd">Veuillez saisir votre mot de passe</string>
    <string name="failed_authentication">Erreur d\'authentification.</string>
    <string name="anomaly_followers">intéressée(s)</string>
    <string name="anomaly_greetings">félicitation(s)</string>
    <string name="anomaly_resolved_toast">Cette anomalie a été clôturée.</string>
    <string name="anomaly_in_progress">Cette anomalie est en cours de résolution.</string>
    <string name="text_photo_service_fait">Photo service fait (facultatif)</string>
    <string name="text_title_requalification">Requalification</string>
    <string name="btn_requalification">Requalifier</string>
    <string name="text_title_service_fait">Service fait</string>
    <string name="text_choose_message_service_fait">Type de message envoyé (obligatoire)</string>
    <string name="anomaly_all">Tous</string>
    <string name="anomaly_draft">Brouillons</string>
    <string name="anomaly_wip">En cours</string>
    <string name="anomaly_ok">Clôturées</string>
    <string name="pref_activity_title">Paramètres</string>
    <string-array name="pref_items_menu">
        <item>Profil</item>
        <item>Préférences</item>
        <item>Conditions générales d\'utilisation</item>
        <item>A propos</item>
    </string-array>
    <string name="button_co">SE CONNECTER</string>
    <string name="button_deco">SE DECONNECTER</string>
    <string name="pref_profil_activity_title">Profil</string>
    <string name="pref_profil_lastname">Nom</string>
    <string name="pref_profil_firstname">Prénom</string>
    <string name="pref_profil_email">Mail de contact</string>
    <string name="pref_profil_enter_email">Renseigner ci-dessous votre mail de contact : </string>
    <string name="pref_profil_btn_access_full_profile">Voir mon profil complet</string>
    <string name="url_full_profile" translatable="false"></string>
    <string name="pref_pref_activity_title">Préférences</string>
    <string name="pref_cgu_activity_title">Conditions générales d\'utilisation</string>
    <string name="cgu_part_one"><![CDATA[<p>Les présentes dispositions ont pour objet de définir les conditions d\'accès et d\'utilisation du site Bien VU géré par l\'Etablissement Public Territorial Plaine Commune.</p><p>En consultant le site, l\'application mobile et les informations qui y figurent, l\'utilisateur accepte, sans aucune réserve, les conditions mentionnées ci-après.</p>]]></string>
    <string name="authorisation_mail">Recevoir les notifications par mail</string>
    <string name="authorisation_geoloc">Autoriser la géolocalisation</string>
    <string name="authorisation_camera">Autoriser bienVU à accéder à ma caméra</string>
    <string name="authorisation_gallery">Autoriser bienVU à accéder à ma bibliothèque</string>
    <string name="retour_arriere">retour arrière</string>
    <string name="favorite_address_title">Adresses favorites</string>
    <string name="favorite_address_modifier">Modifier</string>
    <string name="favorite_address_delete">Tout supprimer</string>
</resources>