<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    android:layout_margin="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<string name="save_mail_popup_title">Restez informé(e)</string>-->
    <!--<string name="save_mail_popul_title_mail_field">Email</string>-->
    <!--<string name="save_mail_popup_confirm">ANNULER</string>-->
    <!--<string name="save_mail_popup_cancel">VALIDER</string>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:text="@string/save_mail_popup_title"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:hint="@string/save_mail_popul_title_mail_field"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/pink" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/save_email_popup_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/save_mail_popup_cancel"
            android:textColor="@color/pink"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/save_email_popup_confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_mail_popup_confirm"
            android:textColor="@color/pink"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>