<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bordeaux"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/priority_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:paddingBottom="15dp"
                android:paddingEnd="0dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:text="@string/text_priority_low"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priority_low_text_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/priority_low"
                android:paddingBottom="15dp"
                android:paddingEnd="0dp"
                android:paddingStart="2dp"
                android:paddingTop="15dp"
                android:text="@string/valeur_defaut_detail"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/grey_tranparent" />

        <TextView
            android:id="@+id/priority_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/text_priority_medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/grey_tranparent" />

        <TextView
            android:id="@+id/priority_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/text_priority_high"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="15dp"
            android:background="@color/grey_tranparent" />

    </LinearLayout>

</LinearLayout>
