<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.accenture.dansmarue.ui.activities.PrefActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white">

        <ImageView
            android:id="@+id/img_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_effect"
            app:srcCompat="@drawable/ic_arrow_back_white_24px"
            android:contentDescription="@string/retour_arriere" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_mon_espace"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/menu_anos"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/toolbar"
        android:background="@color/grey_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/menu_anos_drafts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anomaly_draft"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_anos_unresolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anomaly_wip"
            android:textAlignment="center"
            android:textColor="@color/grey_tranparent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/menu_anos_resolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anomaly_ok"
            android:textAlignment="center"
            android:textColor="@color/grey_tranparent"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/menu_anos"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/my_recycler_view_anomaly_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="100dp" />

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

